# deep-learning-practice

./: .gitignore  TP2_GradCAM.ipynb  TP3 copy.ipynb  TP3-reference.ipynb  TP3.ipynb  TP4.ipynb  TP5-cyrielle.ipynb  TP5-reference.ipynb  TP5.ipynb  TP6-vae.ipynb  TP6_generative_models.ipynb  class_gnn_model.py  class_model_gnn.py  config.yaml  conv_as_message_passing.py  draft.py  lora.py  pyproject.toml  requirements.txt  train.txt  utils.py
wandb/: latest-run
wandb/run-20250326_001819-2f7jop3m/: run-2f7jop3m.wandb
wandb/run-20250326_001819-2f7jop3m/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250326_002507-c73c5i1u/: run-c73c5i1u.wandb
wandb/run-20250326_002507-c73c5i1u/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20250326_003156-artcfcci/: run-artcfcci.wandb
wandb/run-20250326_003156-artcfcci/files/: requirements.txt  wandb-metadata.json
wandb/run-20250326_004025-n9lj3qul/: run-n9lj3qul.wandb
wandb/run-20250326_004025-n9lj3qul/files/: wandb-metadata.json
