[project]
name = "practice-labs"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "torch-geometric (>=2.6.1,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "nbconvert (>=7.16.6,<8.0.0)",
    "torchviz (>=0.0.3,<0.0.4)",
    "jupyterlab (>=4.3.5,<5.0.0)",
    "torchvision (>=0.21.0,<0.22.0)",
    "torchmetrics (>=1.6.2,<2.0.0)",
    "torchinfo (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
